force-app/main/default/objects/Order/fields/itemState__c.field-meta.xml
<CustomField>
    <fullName>itemState__c</fullName>
    <label>itemState</label>
    <length>200</length>
    <type>Text</type>
</CustomField>