force-app/main/default/objects/Order/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <label>Sync Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>