force-app/main/default/objects/Order/fields/userRegistration__c.field-meta.xml
<CustomField>
    <fullName>userRegistration__c</fullName>
    <label>userRegistration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>