force-app/main/default/objects/Order/recordTypes/InitialStage.recordType-meta.xml
<RecordType>
    <fullName>InitialStage</fullName>
    <active>true</active>
    <description>In the recordtype disable, commit and close status value will not be visible.</description>
    <label>InitialStage</label>
</RecordType>