force-app/main/default/objects/Order/recordTypes/SecondStage.recordType-meta.xml
<RecordType>
    <fullName>SecondStage</fullName>
    <active>true</active>
    <description>This will be used to show picklist values when EID is generated.</description>
    <label>SecondStage</label>
</RecordType>